--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         </div>
         
         <button class="play">Play</button>
+        <div class="tempo">
+            <input type="range" class="tempo-slider" max="300" min="20" value="150">
+            <p>Tempo: <span class="tempo-nbr">150</span></p>
+        </div>
 
     </div>
 
